--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2055,7 +2055,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "cbad97cf",
+   "id": "84cc9661",
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3b152f5e",
+   "id": "53cdf4f8",
    "metadata": {},
    "outputs": [
     {
@@ -2223,7 +2223,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "17e7a298",
+   "id": "b58733c3",
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2262,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "339e7375",
+   "id": "972c51cf",
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "071eada8",
+   "id": "1d366fc0",
    "metadata": {},
    "outputs": [
     {
@@ -2339,7 +2339,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f8ebcd17",
+   "id": "20c2c22e",
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2377,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "fc508128",
+   "id": "729ae286",
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2406,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b0582ce7",
+   "id": "3dcd9181",
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2639,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e8fb2b88",
+   "id": "29f3ec8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2651,7 +2651,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5c1e2626",
+   "id": "1f096313",
    "metadata": {},
    "outputs": [
     {
@@ -2794,7 +2794,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "068f37ec",
+   "id": "2a52c641",
    "metadata": {},
    "outputs": [
     {
@@ -2834,7 +2834,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "02b6a1ab",
+   "id": "bd4eced6",
    "metadata": {},
    "outputs": [
     {
@@ -2873,7 +2873,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ed405e31",
+   "id": "9051dcde",
    "metadata": {},
    "outputs": [
     {
@@ -3015,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e9613331",
+   "id": "e9e38abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3026,7 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a8e83754",
+   "id": "92194542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3037,7 +3037,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "0fc048cd",
+   "id": "13909513",
    "metadata": {},
    "outputs": [
     {
@@ -3073,7 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "4f751a99",
+   "id": "bcc641e2",
    "metadata": {},
    "outputs": [
     {
@@ -3226,7 +3226,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "42d89a6d",
+   "id": "6ec7b5a6",
    "metadata": {},
    "outputs": [
     {
@@ -3373,7 +3373,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "86d385da",
+   "id": "691d12dd",
    "metadata": {},
    "outputs": [
     {
@@ -3522,7 +3522,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9246b9e1",
+   "id": "18c54775",
    "metadata": {},
    "outputs": [
     {
@@ -3666,7 +3666,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f5113235",
+   "id": "48415606",
    "metadata": {},
    "outputs": [
     {
@@ -3810,7 +3810,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7489efa2",
+   "id": "6da222ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3824,7 +3824,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "121c18de",
+   "id": "c2227128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3838,7 +3838,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d27b6111",
+   "id": "3b4ae846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3852,7 +3852,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "60920878",
+   "id": "d8126e23",
    "metadata": {},
    "outputs": [
     {
@@ -3958,7 +3958,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "b0e98a54",
+   "id": "9d2f9dc8",
    "metadata": {},
    "outputs": [
     {
@@ -4064,7 +4064,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d0899e43",
+   "id": "753c3951",
    "metadata": {},
    "outputs": [
     {
@@ -4167,7 +4167,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "be341748",
+   "id": "18a00a90",
    "metadata": {},
    "outputs": [
     {
@@ -4271,7 +4271,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "45ccfb53",
+   "id": "aaed6b68",
    "metadata": {},
    "outputs": [
     {
@@ -4301,7 +4301,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "6fb1daf0",
+   "id": "1e998ca5",
    "metadata": {},
    "outputs": [
     {
@@ -4340,7 +4340,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "613aa313",
+   "id": "0fedda80",
    "metadata": {},
    "outputs": [
     {
@@ -4367,7 +4367,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "94d29581",
+   "id": "8e9ea206",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4379,7 +4379,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "5787d42a",
+   "id": "909fcab9",
    "metadata": {},
    "outputs": [
     {
@@ -4716,7 +4716,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "e7fe1f61",
+   "id": "26e64b8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4731,7 +4731,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "dacac3d2",
+   "id": "8ca9db8d",
    "metadata": {},
    "outputs": [
     {
@@ -4757,7 +4757,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "818904b3",
+   "id": "87165d38",
    "metadata": {},
    "outputs": [
     {
@@ -4876,7 +4876,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "8f72f011",
+   "id": "62f1250b",
    "metadata": {},
    "outputs": [
     {
@@ -4994,7 +4994,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "2fe2f9ac",
+   "id": "b5af7eb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5006,7 +5006,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "8290cc7d",
+   "id": "f9b9bdc7",
    "metadata": {},
    "outputs": [
     {
@@ -5170,7 +5170,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "90b4d132",
+   "id": "99e67e10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5185,7 +5185,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8900dc74",
+   "id": "f006c571",
    "metadata": {},
    "outputs": [
     {
@@ -5286,24 +5286,310 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3370a948",
+   "execution_count": 95,
+   "id": "7184aed7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>96</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1000-1999)</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.7</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>70</td>\n",
+       "      <td>83</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Size                                                                  \n",
+       "Small (<1000)                    83.8                  83.9             94   \n",
+       "Medium (1000-1999)               83.4                  83.9             94   \n",
+       "Large (2000-5000)                77.7                  81.3             70   \n",
+       "\n",
+       "                   % Passing Reading % Overall Passing  \n",
+       "School Size                                             \n",
+       "Small (<1000)                     96                90  \n",
+       "Medium (1000-1999)                97                91  \n",
+       "Large (2000-5000)                 83                58  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Formatting.\n",
     "size_summary_df[\"Average Math Score\"] = size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
-    "\n",
     "size_summary_df[\"Average Reading Score\"] = size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
-    "\n",
     "size_summary_df[\"% Passing Math\"] = size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
-    "\n",
     "size_summary_df[\"% Passing Reading\"] = size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
-    "\n",
     "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
     "\n",
     "size_summary_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "c31a8217",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "335c32d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "a43103f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed6ba080",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
